@@ -81,6 +81,8 @@ x^-1 - 0.57721566490153286060651209008240243104 + 0.989055995327972555395395
 1*x^4 + O(x^5)
 4.0238726007709377354370243392300398572 E2564
 277.25887222397812376689284858327062723
+277.25887222397812376689284858327062723 - 4.71238898038468985769396507491925
+43263*I
 0.70315664064524318722569033366791109947
 -x^-1 + O(x^0)
 0.036489973978576520559023667001244432804 + 0.467401100272339654708622749969
@@ -152,4 +154,4 @@ x^-1 + O(x^0)
 3.1251326639409330707998343913109131879 E-157
 4.5628187500777884959959637081483557229 E456568
 1.3768469063730103610139202204469277024 E-456572
-Total time spent: 24
+Total time spent: 11
