@@ -67,6 +67,10 @@ O(x)
 745565*x - 0.19245008972987525483638292683398581855*x^2 + O(x^3)
 O(x)
 0.84147098480789650665250232163029899962*I
+1.0000000000000000000000000000000000000*I
+-1.0000000000000000000000000000000000000*I
+-1.0000000000000000000000000000000000000*I
+1.0000000000000000000000000000000000000*I
 1.6 e-38
 4.9 e-39
 3.1 e-39
