@@ -25,6 +25,7 @@ psi(x)
 gamma(x)
 gamma(1000)
 psi(2^400)
+psi(2^400*I)
 psi(-1.5)
 psi(x+O(x^2))
 real(psi((3/2+0.E-38*I)+x/2+O(x^2)))
