@@ -44,6 +44,10 @@ acosh(1+x^2+O(x^3))
 acosh(2+x+O(x^3))
 acos(1+O(x^3))
 sinh(I)
+tan(10^18*I)
+tan(-10^18*I)
+cotan(10^18*I)
+cotan(-10^18*I)
 w=Pi/4;
 test(z)= my(a=expm1(z),b=exp(z)-1); printf("%.1e\n", abs(a-b)/abs(a));
 for (i=0,7, z=1e-20+i*w; test(z))
