@@ -14,6 +14,7 @@ Done for version 2.14.0 (released ??/??/2020):
     10- 2^(1 + O(3^4)) -> type error
     11- Zn_quad_roots(8,0,-1) to compute roots of x^2-1 mod 8 -> [4,[1,3]]
         (1 or 3 mod 4) instead of the expected [2,[1]] (1 mod 2) [#2265]
+    12- tan(10^20*I) -> overflow (same for cotan and psi)
 
   Added
 HC   1- new GP function eulerreal
